--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -165,7 +165,7 @@ iexfinance==0.5.0 #
 intrinio-sdk==5.15.0
 oandapyV20==0.7.2 # LEVEL_00 # urwid urwidtrees # for OANDA console
 tiingo==0.14.0    # https://github.com/hydrosquall/tiingo-python          Python REST Client for interacting with the Tiingo Financial Data API https://pypi.org/project/tiingo
-# alpaca-trade-api>=1.2.0 # https://github.com/alpacahq/alpaca-trade-api-python
+# alpaca-trade-api>=1.3.0 # old dependencies
 # histdata-downloader npyscreen # Forex Downloader
 #
 pandas_market_calendars==3.1
@@ -475,6 +475,7 @@ url-normalize==1.4.3
 wasabi==0.8.2 # LEVEL_00
 wcwidth==0.2.5 # LEVEL_00
 webencodings==0.5.1 # LEVEL_00
+websockets==9.1 # LEVEL_00
 websocket-client==1.2.1 # LEVEL_00
 Werkzeug==2.0.1 # LEVEL_00
 widgetsnbextension==3.5.1
