--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -33,7 +33,7 @@ graphviz==0.17  # needed for dependecy graphing .. missing dependencies, but sti
 #
 # Generic Low Level Tools
 #
-pandas==1.3.3
+pandas==1.3.3 # LEVEL_02
 pandas-datareader==0.10.0
 matplotlib==3.4.3
 matplotlib-inline==0.1.3
@@ -97,9 +97,9 @@ gensim==4.1.2
 pmdarima==1.8.3
 #darts>=0.9.1  # time series predictions (behind on requirements)
 #tsai>=0.2.18  # time series and sequences, triggers huge number of dependencies !
-prophet==1.0.1  # time series forecasts from Facebook
+prophet==1.0.1  # time series forecasts from Facebook, depends on pandas
 Cython==0.29.24 # LEVEL_00 # pystan: cython!=0.25.1,>=0.22
-convertdate==2.3.2 # for prophet
+convertdate==2.3.2 # LEVEL_01 # for prophet (requires pytz, pymeeus)
 LunarCalendar==0.0.9 # for prophet
 holidays==0.11.2 # for prophet
 
@@ -409,11 +409,11 @@ pyflakes==2.3.1 # LEVEL_00
 pyinstaller==4.5.1
 pyinstaller-hooks-contrib==2021.3 # LEVEL_00 # deployment
 pyluach==1.3.0 # LEVEL_00
-PyMeeus==0.5.11 # LEVEL_00
+pymeeus==0.5.11 # LEVEL_00
 pyparsing==2.4.7 # LEVEL_00
 pyrsistent==0.18.0 # LEVEL_00
 PySocks==1.7.1 # LEVEL_00
-python-dateutil==2.8.2
+python-dateutil==2.8.2 # LEVEL_01 (depends on six)
 python-slugify==5.0.2
 python-socks==1.2.4 # LEVEL_00
 pytz==2021.1 # LEVEL_00
