--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -29,7 +29,7 @@
 #
 # Internal
 #
-pipdeptree==2.1.0 # LEVEL_01 # INTERNAL # needed at the end of script for package management
+pipdeptree==2.1.0 # LEVEL_02 # INTERNAL # needed at the end of script for package management
 
 #
 # Pre-Installs .. separate install before anything else
@@ -43,13 +43,13 @@ gast==0.4.0 # LEVEL_01 # LOCKED # tensorflow requirement, generic ast
 six==1.15.0 # LEVEL_01 # LOCKED # tensorflow 2.5.0 requires it
 typing-extensions==3.7.4.3 # LEVEL_01 # LOCKED # tensorflow==2.6.0 requires ~3.7.4
 clang==5.0 # LEVEL_01 # LOCKED # tensorflow==2.6.0 requires clang~=5.0
-absl-py==0.12.0 # LOCKED # tensorflow-metadata 1.2.0 has requirement absl-py<0.13,>=0.9
-h5py==3.1.0 # LOCKED # tensorflow==2.6.0 requires h5py~=3.1.0
+absl-py==0.12.0 # LOCKED # LEVEL_02 # tensorflow-metadata 1.2.0 has requirement absl-py<0.13,>=0.9
+h5py==3.1.0 # LEVEL_02 # LOCKED # tensorflow==2.6.0 requires h5py~=3.1.0
 google-auth==1.35.0 # LOCKED # tensorboard==2.6.0 requires google-auth>=1.6.3,<2
 flatbuffers==1.12 # LOCKED # LEVEL_01 # tensorflow 2.6.0 requires flatbuffers~=1.12.0
 bokeh==2.3.3 # LOCKED # 2.4.0 does not work easily just yet; typing-extensions and tensorflow !!
 #
-pystan==2.19.1.1 # LOCKED # POST_INSTALL_00 # prophet 1.0.1 has requirement pystan~=2.19.1.1
+pystan==2.19.1.1 # LEVEL_02 # LOCKED # POST_INSTALL_00 # prophet 1.0.1 has requirement pystan~=2.19.1.1
 cmdstanpy==0.9.68 # LOCKED # prophet==1.0.1 requires cmdstanpy==0.9.68
 #
 graphviz==0.17  # LEVEL_00 # needed for dependecy graphing .. missing dependencies, but still needed
@@ -61,12 +61,12 @@ graphviz==0.17  # LEVEL_00 # needed for dependecy graphing .. missing dependenci
 pandas==1.3.3 # LEVEL_03
 pandas-datareader==0.10.0
 matplotlib==3.4.3
-matplotlib-inline==0.1.3
-scipy==1.7.1 # Scientific Library for Python
+matplotlib-inline==0.1.3 # LEVEL_02
+scipy==1.7.1 # LEVEL_02 # Scientific Library for Python
 seaborn==0.11.2 # Statistical data visualization
-numba==0.54.0
-openpyxl==3.0.9
-XlsxWriter==3.0.1 # LEVEL_01 needed for pandas XLSX ...
+numba==0.54.0 # LEVEL_02
+openpyxl==3.0.9 # LEVEL_02
+xlsxwriter==3.0.1 # LEVEL_01 needed for pandas XLSX ...
 toolz==0.11.1 # LEVEL_01
 
 #
@@ -77,30 +77,30 @@ tensorboard==2.6.0
 tensorboard-data-server==0.6.1 # LEVEL_01
 tensorboard-plugin-wit==1.8.0 # LEVEL_01
 tensorflow==2.6.0
-tensorflow-addons==0.14.0
+tensorflow-addons==0.14.0 # LEVEL_02
 tensorflow-datasets==4.4.0
 tensorflow-estimator==2.6.0 # LEVEL_01
-tensorflow-hub==0.12.0
-tensorflow-metadata==1.2.0
-tensorflow-model-optimization==0.6.0
+tensorflow-hub==0.12.0 # LEVEL_02
+tensorflow-metadata==1.2.0 # LEVEL_02
+tensorflow-model-optimization==0.6.0 # LEVEL_02
 tensorflow-text==2.6.0
 tf-models-official==2.6.0
-tf-slim==1.1.0
+tf-slim==1.1.0 # LEVEL_02
 #
 keras==2.6.0 # LEVEL_01
-keras-Preprocessing==1.1.2 # LEVEL_02
+keras-preprocessing==1.1.2 # LEVEL_02
 #
 huggingface-hub==0.0.17
 #
-xgboost==1.4.2 # check installation notes
+xgboost==1.4.2 # LEVEL_02 # check installation notes
 #
-pyro-api==0.1.2 # probabilistic modeling and inference
+pyro-api==0.1.2 # LEVEL_01 # probabilistic modeling and inference
 pyro-ppl==1.7.0
 #
-torch==1.9.1
+torch==1.9.1 # LEVEL_02
 torch-optimizer==0.1.0
-torchaudio==0.9.1
-torchvision==0.10.1
+torchaudio==0.9.1 # LEVEL_02
+torchvision==0.10.1 # LEVEL_02
 pytorch-ranger==0.1.1
 #
 theano==1.0.5 # LEVEL_02
@@ -109,11 +109,11 @@ nose==1.3.7 # LEVEL_01
 fastai==2.5.2
 fastcore==1.3.26
 fastdownload==0.0.5
-fastprogress==1.0.0
+fastprogress==1.0.0 # LEVEL_02
 #
 h2o==3.34.0.1
 #
-gym==0.20.0
+gym==0.20.0 # LEVEL_02
 #
 gensim==4.1.2
 #
@@ -134,7 +134,7 @@ holidays==0.11.3.1 # for prophet
 #
 # NLP
 #
-nltk==3.6.3
+nltk==3.6.3 # LEVEL_02
 #
 babel==2.9.1 # LEVEL_02
 #
@@ -154,7 +154,7 @@ datasets==1.12.1
 #
 tokenizers==0.10.3 # LEVEL_01
 #
-textblob==0.15.3
+textblob==0.15.3 # LEVEL_02
 wordcloud==1.8.1
 #
 #newspaper3k>=0.2.8
@@ -175,11 +175,11 @@ pyod==0.9.3  # outlyer detection
 #
 # Computer Vision
 #
-opencv-python==4.5.3.56
-opencv-python-headless==4.5.3.56
-Pillow==8.3.2 # LEVEL_01
-imageio==2.9.0
-tifffile==2021.8.30
+opencv-python==4.5.3.56 # LEVEL_02
+opencv-python-headless==4.5.3.56 # LEVEL_02
+pillow==8.3.2 # LEVEL_01
+imageio==2.9.0 # LEVEL_02
+tifffile==2021.8.30 # LEVEL_02
 
 #
 # Finance
@@ -188,11 +188,11 @@ alpha-vantage==2.3.1
 coinpaprika==0.1.0
 empyrical==0.5.5 # empyrical 0.5.3 - technical analysis: Common financial risk metrics
 finta==1.3 # https://pypi.org/project/finta (pip install --upgrade finta ... for >= 0.4.1
-ib-insync==0.9.66 # InteractiveBrokers 3rd party trading api ip_insync; dataclasses # if necessary
+ib-insync==0.9.66 # LEVEL_02 # InteractiveBrokers 3rd party trading api ip_insync; dataclasses # if necessary
 iexfinance==0.5.0 #
 intrinio-sdk==5.15.0
 oandapyV20==0.7.2 # LEVEL_01 # urwid urwidtrees # for OANDA console
-tiingo==0.14.0    # https://github.com/hydrosquall/tiingo-python          Python REST Client for interacting with the Tiingo Financial Data API https://pypi.org/project/tiingo
+tiingo==0.14.0 # LEVEL_02 # Python REST Client for interacting with the Tiingo Financial Data API https://pypi.org/project/tiingo
 # alpaca-trade-api>=1.3.0 # old dependencies
 # histdata-downloader npyscreen # Forex Downloader
 #
@@ -201,7 +201,7 @@ exchange_calendars==3.3
 pandas-finance==0.1.2
 mplfinance==0.12.7a17
 #
-yahoofinancials==1.6  # https://github.com/JECSand/yahoofinancials
+yahoofinancials==1.6 # LEVEL_02 # https://github.com/JECSand/yahoofinancials
 yfinance==0.1.63 # https://github.com/ranaroussi/yfinance
 #
 pyfolio==0.9.2 # https://github.com/quantopian/pyfolio ; https://www.quantopian.com/docs/user-guide/tools/pyfolio
@@ -212,24 +212,24 @@ ta-lib==0.4.21 # LEVEL_02 # NO_CACHE_DIR # fix: pip uninstall ta-lib; pip instal
 # GUI & Visualization
 #
 qtconsole==5.1.1
-QtPy==1.11.2 # LEVEL_01
-PySimpleGUI==4.48.0 # LEVEL_01
+qtpy==1.11.2 # LEVEL_01
+pysimplegui==4.48.0 # LEVEL_01
 pyQt5==5.15.4 # LEVEL_02
-PyQt5-Qt5==5.15.2 # LEVEL_01
-PyQt5-sip==12.9.0 # LEVEL_01
-pyqtgraph==0.12.2 # for Chaos
-PyOpenGL==3.1.5 # LEVEL_01 # for PySpace
+pyqt5-qt5==5.15.2 # LEVEL_01
+pyqt5-sip==12.9.0 # LEVEL_01
+pyqtgraph==0.12.2 # LEVEL_02 # for Chaos
+pyopengl==3.1.5 # LEVEL_01 # for PySpace
 pygame==2.0.1 # LEVEL_01
-Pygments==2.10.0 # LEVEL_01
-pydot==1.4.2 # Python interface to Graphviz's Dot
+pygments==2.10.0 # LEVEL_01
+pydot==1.4.2 # LEVEL_02 # Python interface to Graphviz's Dot
 networkx==2.6.3 # LEVEL_01 # includes drawing graphs
 # pysimpleguiqt>=0.35.0
 #
-vispy==0.9.0
+vispy==0.9.0 # LEVEL_02
 #
 kivy==2.0.0 # LEVEL_04
 kivy-examples==2.0.0 # LEVEL_04
-kivy-Garden==0.1.4 # LEVEL_03
+kivy-garden==0.1.4 # LEVEL_03
 kiwisolver==1.3.2 # LEVEL_01
 #
 dash==2.0.0
@@ -248,8 +248,8 @@ google-api-core==2.0.1
 google-api-python-client==2.23.0
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-googleapis-common-protos==1.53.0
+google-pasta==0.2.0 # LEVEL_02
+googleapis-common-protos==1.53.0 # LEVEL_02
 googletransx==2.4.2
 
 #
@@ -259,14 +259,14 @@ jupyter==1.0.0
 jupyter-bokeh==3.0.3
 jupyter-client==7.0.5
 jupyter-console==6.4.0
-jupyter-core==4.8.1
+jupyter-core==4.8.1 # LEVEL_02
 jupyter-dash==0.4.0
 jupyter-packaging==0.10.6
 jupyter-server==1.11.0
 jupyter-server-proxy==3.1.0
 jupyterlab==3.1.14
 #jupyterlab-dash==0.1.0a3
-jupyterlab-pygments==0.1.2
+jupyterlab-pygments==0.1.2 # LEVEL_02
 jupyterlab-server==2.8.2
 jupyterlab-widgets==1.0.2 # LEVEL_01
 
@@ -279,21 +279,21 @@ twint==2.1.20 # Twitter downloader
 #
 # Tools
 #
-beautifulsoup4==4.10.0
+beautifulsoup4==4.10.0 # LEVEL_02
 persist-queue==0.7.0 # LEVEL_01 # Use with iLock !! (or celery ?)
 cloudscraper==1.2.58 # bypass Cloudflare's anti-bot page
 colorama==0.4.4 # LEVEL_01 Cross-platform colored terminal text
 filelock==3.1.0 # LEVEL_01
-flake8==3.9.2 # better linter than pyflakes
+flake8==3.9.2 # LEVEL_02 # better linter than pyflakes
 gprof2dot==2021.2.21 # LEVEL_01 # attempt to visualize cProfile
-pydeps==1.10.5 # cd src/main; pydeps .; open main.svg
-autopep8==1.5.7 # using fix_file ..
-mypy==0.910
+pydeps==1.10.5 # LEVEL_02 # cd src/main; pydeps .; open main.svg
+autopep8==1.5.7 # LEVEL_02 # using fix_file ..
+mypy==0.910 # LEVEL_02
 mypy-extensions==0.4.3 # LEVEL_01 # investigate more for automated checking
 pytype==2021.9.27
-importlab==0.6.1
+importlab==0.6.1 # LEVEL_02
 libcst==0.3.21
-ninja==1.10.2
+ninja==1.10.2 # LEVEL_01
 
 #
 # Low level dependencies
@@ -306,24 +306,24 @@ aiohttp==3.7.4.post0 # Async http client/server framework (asyncio)
 aiohttp-socks==0.6.0
 altgraph==0.17.2 # LEVEL_01
 ansi2html==1.6.0 # LEVEL_01
-anyio==3.3.2
+anyio==3.3.2 # LEVEL_02
 appdirs==1.4.4 # LEVEL_01
 appnope==0.1.2 # LEVEL_01
 argon2-cffi==21.1.0
 arrow==1.1.1
 ast-decompiler==0.4.0 # LEVEL_01
-astunparse==1.6.3
+astunparse==1.6.3 # LEVEL_02
 async-timeout==3.0.1 # LEVEL_01
 asynq==1.4.0
 attrs==21.2.0 # LEVEL_01
 backcall==0.2.0 # LEVEL_01
 bleach==4.1.0
-blis==0.7.4
+blis==0.7.4 # LEVEL_02
 brotli==1.0.9 # LEVEL_01
 cachetools==4.2.2 # LEVEL_01
 catalogue==2.0.6 # LEVEL_01
 cchardet==2.1.7 # LEVEL_01
-cffi==1.14.6
+cffi==1.14.6 # LEVEL_02
 chardet==4.0.0 # LEVEL_01
 charset-normalizer==2.0.6 # LEVEL_01
 chart-studio==1.1.0
@@ -333,22 +333,22 @@ codemod==1.0.0 # LEVEL_01
 commonmark==0.9.1 # LEVEL_01
 coverage==5.5 # LEVEL_01
 croniter==1.0.15
-cycler==0.10.0
+cycler==0.10.0 # LEVEL_02
 cymem==2.0.5 # LEVEL_01
 debugpy==1.4.3 # LEVEL_01
 decorator==5.1.0 # LEVEL_01
 defusedxml==0.7.1 # LEVEL_01
 deprecation==2.1.0
 dill==0.3.4 # LEVEL_01
-dm-tree==0.1.6
+dm-tree==0.1.6 # LEVEL_02
 dnspython==2.1.0 # LEVEL_01
 docutils==0.17.1 # LEVEL_01
-elasticsearch==7.15.0
-email-validator==1.1.3
+elasticsearch==7.15.0 # LEVEL_02
+email-validator==1.1.3 # LEVEL_02
 entrypoints==0.3 # LEVEL_01
 ephem==4.0.0.2 # LEVEL_01
 et-xmlfile==1.1.0 # LEVEL_01
-eventkit==0.8.8
+eventkit==0.8.8 # LEVEL_02
 fake-useragent==0.1.11 # LEVEL_01
 flask==2.0.1 # LEVEL_03
 flask-compress==1.10.1 # LEVEL_03
@@ -357,115 +357,115 @@ freetype-py==2.2.0 # LEVEL_01
 fsspec==2021.9.0 # LEVEL_01
 future==0.18.2 # LEVEL_01
 geographiclib==1.52 # LEVEL_01
-geopy==2.2.0
+geopy==2.2.0 # LEVEL_02
 gin-config==0.4.0 # LEVEL_01
-grpcio==1.41.0
+grpcio==1.41.0 # LEVEL_02
 heapdict==1.0.1 # LEVEL_01
 hijri-converter==2.2.2 # LEVEL_01
 hsluv==5.0.2 # LEVEL_01
-httplib2==0.19.1
+httplib2==0.19.1 # LEVEL_02
 idna==3.2 # LEVEL_01
-importlib-resources==5.2.2
+importlib-resources==5.2.2 # LEVEL_02
 ipykernel==6.4.1
 ipython==7.28.0
 ipython-genutils==0.2.0 # LEVEL_01
 ipywidgets==7.6.5
 iso8601==0.1.16 # LEVEL_01
 itsdangerous==2.0.1 # LEVEL_01
-jedi==0.18.0
+jedi==0.18.0 # LEVEL_02
 jinja2==3.0.1 # LEVEL_02
 jmespath==0.10.0 # LEVEL_01
 joblib==1.0.1 # LEVEL_01
 json5==0.9.6 # LEVEL_01
-jsonschema==3.2.0
+jsonschema==3.2.0 # LEVEL_02
 korean-lunar-calendar==0.2.1 # LEVEL_01
 llvmlite==0.37.0 # LEVEL_01
 locket==0.2.1 # LEVEL_01
 lxml==4.6.3 # LEVEL_01
-m3u8==0.9.0 # play list parser, udemy-dl2
-macholib==1.15.2
-Markdown==3.3.4 # LEVEL_01
-MarkupSafe==2.0.1 # LEVEL_01
+m3u8==0.9.0 # LEVEL_02 # play list parser, udemy-dl2
+macholib==1.15.2 # LEVEL_02
+markdown==3.3.4 # LEVEL_01
+markupsafe==2.0.1 # LEVEL_01
 mccabe==0.6.1 # LEVEL_01
-memory-profiler==0.58.0
+memory-profiler==0.58.0 # LEVEL_02
 mistune==0.8.4 # LEVEL_01
 msgpack==1.0.2 # LEVEL_01
 multidict==5.1.0 # LEVEL_01
-multipledispatch==0.6.0
-multiprocess==0.70.12.2
+multipledispatch==0.6.0 # LEVEL_02
+multiprocess==0.70.12.2 # LEVEL_02
 multitasking==0.0.9 # LEVEL_01
 murmurhash==1.0.5 # LEVEL_01
 nbclassic==0.3.2
 nbclient==0.5.4
 nbconvert==6.2.0
-nbformat==5.1.3
+nbformat==5.1.3 # LEVEL_02
 nest-asyncio==1.5.1 # LEVEL_01
 netifaces==0.11.0 # LEVEL_01
 notebook==6.4.4
 oauth2client==4.1.3
 oauthlib==3.1.1 # LEVEL_01
-opt-einsum==3.3.0
-packaging==21.0
+opt-einsum==3.3.0 # LEVEL_02
+packaging==21.0 # LEVEL_02
 pandocfilters==1.5.0 # LEVEL_01
-params-flow==0.8.2
+params-flow==0.8.2 # LEVEL_02
 parso==0.8.2 # LEVEL_01
-partd==1.2.0
+partd==1.2.0 # LEVEL_02
 pathy==0.6.0
-patsy==0.5.2
-pexpect==4.8.0
+patsy==0.5.2 # LEVEL_02
+pexpect==4.8.0 # LEVEL_02
 pickleshare==0.7.5 # LEVEL_01
-plotly==5.3.1
+plotly==5.3.1 # LEVEL_02
 portalocker==2.3.2 # LEVEL_01
-preshed==3.0.5
+preshed==3.0.5 # LEVEL_02
 prometheus-client==0.11.0 # LEVEL_01
-promise==2.3
-prompt-toolkit==3.0.20
-proto-plus==1.19.1
-protobuf==3.18.0
+promise==2.3 # LEVEL_02
+prompt-toolkit==3.0.20 # LEVEL_02
+proto-plus==1.19.1 # LEVEL_02
+protobuf==3.18.0 # LEVEL_01
 psutil==5.8.0 # LEVEL_01
 ptyprocess==0.7.0 # LEVEL_01
 py-cpuinfo==8.0.0 # LEVEL_01
-py-lets-be-rational==1.0.1
+py-lets-be-rational==1.0.1 # LEVEL_02
 py-params==0.10.2 # LEVEL_01
 pyanalyze==0.3.1
-pyarrow==5.0.0
+pyarrow==5.0.0 # LEVEL_02
 pyasn1==0.4.8 # LEVEL_01
-pyasn1-modules==0.2.8
-pycares==4.0.0
+pyasn1-modules==0.2.8 # LEVEL_02
+pycares==4.0.0 # LEVEL_02
 pycocotools==2.0.2
 pycodestyle==2.7.0 # LEVEL_01
 pycparser==2.20 # LEVEL_01
-pydantic==1.8.2
+pydantic==1.8.2 # LEVEL_02
 pyflakes==2.3.1 # LEVEL_01
-pyinstaller==4.5.1
+pyinstaller==4.5.1 # LEVEL_02
 pyinstaller-hooks-contrib==2021.3 # LEVEL_01 # deployment
 pyluach==1.3.0 # LEVEL_01
 pymeeus==0.5.11 # LEVEL_01
 pyparsing==2.4.7 # LEVEL_01
 pyrsistent==0.18.0 # LEVEL_01
-PySocks==1.7.1 # LEVEL_01
+pysocks==1.7.1 # LEVEL_01
 python-dateutil==2.8.2 # LEVEL_02 (depends on six)
-python-slugify==5.0.2
+python-slugify==5.0.2 # LEVEL_02
 python-socks==1.2.4 # LEVEL_01
 pytz==2021.1 # LEVEL_01
 pywavelets==1.1.1 # LEVEL_02
-PyYAML==5.4.1 # LEVEL_01
+pyyaml==5.4.1 # LEVEL_01
 pyzmq==22.3.0 # LEVEL_01
-qcore==1.7.0
+qcore==1.7.0 # LEVEL_02
 regex==2021.9.24 # LEVEL_01
-requests==2.26.0
+requests==2.26.0 # LEVEL_02
 requests-cache==0.8.1
-requests-oauthlib==1.3.0
-requests-toolbelt==0.9.1
-requests-unixsocket==0.2.0
-retrying==1.3.3
-rich==10.11.0
-rsa==4.7.2
+requests-oauthlib==1.3.0 # LEVEL_02
+requests-toolbelt==0.9.1 # LEVEL_02
+requests-unixsocket==0.2.0 # LEVEL_02
+retrying==1.3.3 # LEVEL_02
+rich==10.11.0 # LEVEL_02
+rsa==4.7.2 # LEVEL_02
 s3transfer==0.5.0
-sacrebleu==2.0.0
-sacremoses==0.0.46
+sacrebleu==2.0.0 # LEVEL_02
+sacremoses==0.0.46 # LEVEL_02
 schedule==1.1.0 # LEVEL_01
-Send2Trash==1.8.0 # LEVEL_01
+send2trash==1.8.0 # LEVEL_01
 seqeval==1.2.2
 setuptools-git==1.2 # LEVEL_01
 simpervisor==0.4 # LEVEL_01
@@ -474,18 +474,18 @@ smart-open==5.2.1 # LEVEL_01
 sniffio==1.2.0 # LEVEL_01
 sortedcontainers==2.4.0 # LEVEL_01 # Python Sorted Container Types: SortedList, SortedDict, and SortedSet
 soupsieve==2.2.1 # LEVEL_01
-srsly==2.4.1
+srsly==2.4.1 # LEVEL_02
 statsmodels==0.12.2
 stdlib-list==0.8.0 # LEVEL_01
-stumpy==1.9.2
+stumpy==1.9.2 # LEVEL_02
 tabulate==0.8.9 # LEVEL_01
 tblib==1.7.0 # LEVEL_01
 tenacity==8.0.1 # LEVEL_01
 termcolor==1.1.0 # LEVEL_01
-terminado==0.12.1
+terminado==0.12.1 # LEVEL_02
 testpath==0.5.0 # LEVEL_01
 text-unidecode==1.3 # LEVEL_01
-thinc==8.0.10
+thinc==8.0.10 # LEVEL_02
 threadpoolctl==2.2.0  # LEVEL_01
 toml==0.10.2 # LEVEL_01
 tomlkit==0.7.2 # LEVEL_01
@@ -494,25 +494,25 @@ tqdm==4.62.3 # LEVEL_01 # A Fast, Extensible Progress Meter
 traitlets==5.1.0 # LEVEL_01
 typed-ast==1.4.3 # LEVEL_01
 typeguard==2.12.1 # LEVEL_01
-typer==0.4.0
-typeshed-client==1.1.1
-typing-inspect==0.7.1
+typer==0.4.0 # LEVEL_02
+typeshed-client==1.1.1 # LEVEL_02
+typing-inspect==0.7.1 # LEVEL_02
 ua-parser==0.10.0 # LEVEL_01
 ujson==4.2.0 # LEVEL_01
-Unidecode==1.3.2 # LEVEL_01
+unidecode==1.3.2 # LEVEL_01
 uritemplate==3.0.1 # LEVEL_01
 urllib3==1.26.7 # LEVEL_01
-url-normalize==1.4.3
+url-normalize==1.4.3 # LEVEL_02
 wasabi==0.8.2 # LEVEL_01
 wcwidth==0.2.5 # LEVEL_01
 webencodings==0.5.1 # LEVEL_01
 websockets==10.0 # LEVEL_01
 websocket-client==1.2.1 # LEVEL_01
-Werkzeug==2.0.1 # LEVEL_01
+werkzeug==2.0.1 # LEVEL_01
 widgetsnbextension==3.5.1
 wireless==0.3.3 # LEVEL_01
 wrapt==1.12.1 # LEVEL_01
 xxhash==2.0.2 # LEVEL_01
-yarl==1.6.3
-zict==2.0.0
+yarl==1.6.3 # LEVEL_02
+zict==2.0.0 # LEVEL_02
 zipp==3.6.0 # LEVEL_01
