--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -50,7 +50,7 @@ flatbuffers==1.12 # LOCKED # LEVEL_01 # tensorflow 2.6.0 requires flatbuffers~=1
 bokeh==2.3.3 # LEVEL_03 # LOCKED # 2.4.0 does not work easily just yet; typing-extensions and tensorflow !!
 #
 pystan==2.19.1.1 # LEVEL_02 # LOCKED # POST_INSTALL_00 # prophet 1.0.1 has requirement pystan~=2.19.1.1
-cmdstanpy==0.9.68 # LOCKED # prophet==1.0.1 requires cmdstanpy==0.9.68
+cmdstanpy==0.9.68 # LEVEL_04 # LOCKED # prophet==1.0.1 requires cmdstanpy==0.9.68
 #
 graphviz==0.17  # LEVEL_00 # needed for dependecy graphing .. missing dependencies, but still needed
 #
@@ -84,7 +84,7 @@ tensorflow-hub==0.12.0 # LEVEL_02
 tensorflow-metadata==1.2.0 # LEVEL_02
 tensorflow-model-optimization==0.6.0 # LEVEL_02
 tensorflow-text==2.6.0 # LEVEL_03
-tf-models-official==2.6.0
+tf-models-official==2.6.0 # LEVEL_04
 tf-slim==1.1.0 # LEVEL_02
 #
 keras==2.6.0 # LEVEL_01
@@ -106,7 +106,7 @@ pytorch-ranger==0.1.1 # LEVEL_03
 theano==1.0.5 # LEVEL_02
 nose==1.3.7 # LEVEL_01
 #
-fastai==2.5.2
+fastai==2.5.2 # LEVEL_04
 fastcore==1.3.26 # LEVEL_03
 fastdownload==0.0.5 # LEVEL_03
 fastprogress==1.0.0 # LEVEL_02
@@ -122,10 +122,10 @@ gensim==4.1.2 # LEVEL_03
 #
 # Time Series
 #
-pmdarima==1.8.3
+pmdarima==1.8.3 # LEVEL_04
 #darts>=0.9.1  # time series predictions (behind on requirements)
 #tsai>=0.2.18  # time series and sequences, triggers huge number of dependencies !
-prophet==1.0.1  # time series forecasts from Facebook, depends on pandas
+prophet==1.0.1 # LEVEL_04 # time series forecasts from Facebook, depends on pandas
 cython==0.29.24 # LEVEL_01 # pystan: cython!=0.25.1,>=0.22
 convertdate==2.3.2 # LEVEL_02 # for prophet (requires pytz, pymeeus)
 lunarcalendar==0.0.9 # LEVEL_03 # for prophet
@@ -139,9 +139,9 @@ nltk==3.6.3 # LEVEL_02
 babel==2.9.1 # LEVEL_02
 #
 bert-for-tf2==0.14.9 # LEVEL_03
-bertviz==1.2.0  # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger
+bertviz==1.2.0 # LEVEL_05 # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger
 sentencepiece==0.1.96 # LEVEL_01 # for BERT
-boto3==1.18.51 # required by bertviz
+boto3==1.18.51 # LEVEL_04 # required by bertviz
 botocore==1.21.51 # LEVEL_03 # required by boto3
 #
 spacy==3.1.3 # LEVEL_03
@@ -150,7 +150,7 @@ spacytextblob==3.0.1 # LEVEL_03
 # spacy-transformers  # downgrades transformers !!
 #
 transformers==4.11.2 # LEVEL_03
-datasets==1.12.1
+datasets==1.12.1 # LEVEL_04
 #
 tokenizers==0.10.3 # LEVEL_01
 #
@@ -162,15 +162,15 @@ wordcloud==1.8.1 # LEVEL_03
 #
 # Data Science
 #
-imbalanced-learn==0.8.1
+imbalanced-learn==0.8.1 # LEVEL_04
 kaggle==1.5.12 # LEVEL_03
 dask[complete]==2021.9.1 # LEVEL_03
-dask-glm==0.2.0
-dask-ml==1.9.0
+dask-glm==0.2.0 # LEVEL_04
+dask-ml==1.9.0 # LEVEL_04
 distributed==2021.9.1 # LEVEL_03
 scikit-image==0.18.3 # LEVEL_03
 scikit-learn==1.0 # LEVEL_03
-pyod==0.9.3  # outlyer detection
+pyod==0.9.3 # LEVEL_04 # outlyer detection
 
 #
 # Computer Vision
@@ -186,32 +186,32 @@ tifffile==2021.8.30 # LEVEL_02
 #
 alpha-vantage==2.3.1 # LEVEL_03
 coinpaprika==0.1.0 # LEVEL_03
-empyrical==0.5.5 # empyrical 0.5.3 - technical analysis: Common financial risk metrics
-finta==1.3 # https://pypi.org/project/finta (pip install --upgrade finta ... for >= 0.4.1
+empyrical==0.5.5 # LEVEL_04 # empyrical 0.5.3 - technical analysis: Common financial risk metrics
+finta==1.3 # LEVEL_04
 ib-insync==0.9.66 # LEVEL_02 # InteractiveBrokers 3rd party trading api ip_insync; dataclasses # if necessary
-iexfinance==0.5.0 #
+iexfinance==0.5.0 # LEVEL_04
 intrinio-sdk==5.15.0 # LEVEL_03
 oandapyV20==0.7.2 # LEVEL_01 # urwid urwidtrees # for OANDA console
 tiingo==0.14.0 # LEVEL_02 # Python REST Client for interacting with the Tiingo Financial Data API https://pypi.org/project/tiingo
 # alpaca-trade-api>=1.3.0 # old dependencies
 # histdata-downloader npyscreen # Forex Downloader
 #
-pandas_market_calendars==3.1
-exchange_calendars==3.3
-pandas-finance==0.1.2
-mplfinance==0.12.7a17
+pandas_market_calendars==3.1 # LEVEL_04
+exchange_calendars==3.3 # LEVEL_04
+pandas-finance==0.1.2 # LEVEL_04
+mplfinance==0.12.7a17 # LEVEL_04
 #
 yahoofinancials==1.6 # LEVEL_02 # https://github.com/JECSand/yahoofinancials
 yfinance==0.1.63 # LEVEL_03 # https://github.com/ranaroussi/yfinance
 #
-pyfolio==0.9.2 # https://github.com/quantopian/pyfolio ; https://www.quantopian.com/docs/user-guide/tools/pyfolio
+pyfolio==0.9.2 # LEVEL_04 # https://github.com/quantopian/pyfolio ; https://www.quantopian.com/docs/user-guide/tools/pyfolio
 py-vollib==1.0.1 # LEVEL_03 # option pricing
 ta-lib==0.4.21 # LEVEL_02 # NO_CACHE_DIR # fix: pip uninstall ta-lib; pip install --upgrade --no-cache-dir ta-lib # sometimes needed
 
 #
 # GUI & Visualization
 #
-qtconsole==5.1.1
+qtconsole==5.1.1 # LEVEL_04
 qtpy==1.11.2 # LEVEL_01
 pysimplegui==4.48.0 # LEVEL_01
 pyqt5==5.15.4 # LEVEL_02
@@ -232,10 +232,10 @@ kivy-examples==2.0.0 # LEVEL_04
 kivy-garden==0.1.4 # LEVEL_03
 kiwisolver==1.3.2 # LEVEL_01
 #
-dash==2.0.0
-dash-auth==1.4.1
-dash-bootstrap-components==0.13.1
-dash-canvas==0.1.0
+dash==2.0.0 # LEVEL_04
+dash-auth==1.4.1 # LEVEL_04
+dash-bootstrap-components==0.13.1 # LEVEL_04
+dash-canvas==0.1.0 # LEVEL_04
 dash-core-components==2.0.0 # LEVEL_01
 dash-html-components==2.0.0 # LEVEL_01
 dash-table==5.0.0 # LEVEL_01
@@ -244,8 +244,8 @@ dash-table==5.0.0 # LEVEL_01
 #
 # Google ..
 #
-google-api-core==2.0.1
-google-api-python-client==2.23.0
+google-api-core==2.0.1 # LEVEL_04
+google-api-python-client==2.23.0 # LEVEL_04
 google-auth-httplib2==0.1.0 # LEVEL_03
 google-auth-oauthlib==0.4.6 # LEVEL_03
 google-pasta==0.2.0 # LEVEL_02
@@ -255,19 +255,19 @@ googletransx==2.4.2 # LEVEL_03
 #
 # Jupyter
 #
-jupyter==1.0.0
-jupyter-bokeh==3.0.3
+jupyter==1.0.0 # LEVEL_05
+jupyter-bokeh==3.0.3 # LEVEL_05
 jupyter-client==7.0.5 # LEVEL_03
-jupyter-console==6.4.0
+jupyter-console==6.4.0 # LEVEL_04
 jupyter-core==4.8.1 # LEVEL_02
-jupyter-dash==0.4.0
+jupyter-dash==0.4.0 # LEVEL_04
 jupyter-packaging==0.10.6 # LEVEL_03
-jupyter-server==1.11.0
-jupyter-server-proxy==3.1.0
-jupyterlab==3.1.14
+jupyter-server==1.11.0 # LEVEL_04
+jupyter-server-proxy==3.1.0 # LEVEL_04
+jupyterlab==3.1.14 # LEVEL_06
 #jupyterlab-dash==0.1.0a3
 jupyterlab-pygments==0.1.2 # LEVEL_02
-jupyterlab-server==2.8.2
+jupyterlab-server==2.8.2 # LEVEL_04
 jupyterlab-widgets==1.0.2 # LEVEL_01
 
 #
@@ -366,10 +366,10 @@ hsluv==5.0.2 # LEVEL_01
 httplib2==0.19.1 # LEVEL_02
 idna==3.2 # LEVEL_01
 importlib-resources==5.2.2 # LEVEL_02
-ipykernel==6.4.1
+ipykernel==6.4.1 # LEVEL_04
 ipython==7.28.0 # LEVEL_03
 ipython-genutils==0.2.0 # LEVEL_01
-ipywidgets==7.6.5
+ipywidgets==7.6.5 # LEVEL_05
 iso8601==0.1.16 # LEVEL_01
 itsdangerous==2.0.1 # LEVEL_01
 jedi==0.18.0 # LEVEL_02
@@ -395,13 +395,13 @@ multipledispatch==0.6.0 # LEVEL_02
 multiprocess==0.70.12.2 # LEVEL_02
 multitasking==0.0.9 # LEVEL_01
 murmurhash==1.0.5 # LEVEL_01
-nbclassic==0.3.2
+nbclassic==0.3.2 # LEVEL_05
 nbclient==0.5.4 # LEVEL_03
 nbconvert==6.2.0 # LEVEL_03
 nbformat==5.1.3 # LEVEL_02
 nest-asyncio==1.5.1 # LEVEL_01
 netifaces==0.11.0 # LEVEL_01
-notebook==6.4.4
+notebook==6.4.4 # LEVEL_04
 oauth2client==4.1.3 # LEVEL_03
 oauthlib==3.1.1 # LEVEL_01
 opt-einsum==3.3.0 # LEVEL_02
@@ -509,7 +509,7 @@ webencodings==0.5.1 # LEVEL_01
 websockets==10.0 # LEVEL_01
 websocket-client==1.2.1 # LEVEL_01
 werkzeug==2.0.1 # LEVEL_01
-widgetsnbextension==3.5.1
+widgetsnbextension==3.5.1 # LEVEL_04
 wireless==0.3.3 # LEVEL_01
 wrapt==1.12.1 # LEVEL_01
 xxhash==2.0.2 # LEVEL_01
